# POO-Library

./: README.md  aplicacaoPrincipal.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
redis/: Dockerfile  PovoarRedis.py  povoar.py  requirements.txt
transfer_info.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
worker/: Dockerfile  TransferirInfos.py  requirements.txt
