[tool.poetry]
name = "transfer-infos"
version = "1.0"
description = "Pacote para Transferir dados do Redis ao PostGreSQL"
authors = ["Daniel, Francinaldo, Luis, Iago, Rita, Cristina"]
license = "Forca Jedi"
readme = "README.md"
packages = [
    { include = "library", from = "src" }
]

[tool.poetry.dependencies]
python = "3.9.13"
requests = "2.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"